--- a/ARFoodFinder/Base.lproj/Main.storyboard
+++ b/ARFoodFinder/Base.lproj/Main.storyboard
@@ -9,7 +9,37 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Montserrat-Bold.ttf">
+            <string>Montserrat-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="FyI-wW-esW">
+            <objects>
+                <viewController id="1fR-he-AGd" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ib6-7k-OYA"/>
+                        <viewControllerLayoutGuide type="bottom" id="Y7c-Hm-IN1"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ofb-xo-Xnw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1j9-qS-YAE">
+                                <rect key="frame" x="119" y="269" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="H7I-lG-0Gb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-538" y="134"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -26,7 +56,8 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7nI-rX-ZTY">
-                                <rect key="frame" x="156" y="617" width="62" height="30"/>
+                                <rect key="frame" x="153" y="614" width="69" height="33"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="CAMERA"/>
                                 <connections>
                                     <action selector="showARController:" destination="BYZ-38-t0r" eventType="touchUpInside" id="atx-GQ-cwO"/>
@@ -40,8 +71,8 @@
                             <constraint firstItem="K1b-N6-ZNO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="OW3-K5-oTs"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7nI-rX-ZTY" secondAttribute="bottom" constant="20" id="ksv-n5-icW"/>
                             <constraint firstAttribute="trailing" secondItem="K1b-N6-ZNO" secondAttribute="trailing" id="lsn-eF-blK"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="7nI-rX-ZTY" secondAttribute="trailing" constant="141" id="rBr-AU-G6d"/>
-                            <constraint firstItem="7nI-rX-ZTY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="140" id="rek-YU-aau"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7nI-rX-ZTY" secondAttribute="trailing" constant="137" id="rBr-AU-G6d"/>
+                            <constraint firstItem="7nI-rX-ZTY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="137" id="rek-YU-aau"/>
                         </constraints>
                     </view>
                     <connections>
@@ -73,7 +104,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="7MU-pi-hWn"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="17"/>
                                 <state key="normal" title="BACK"/>
                                 <connections>
                                     <action selector="backButtonPressed:" destination="L0l-4h-Qcg" eventType="touchUpInside" id="ZDe-pA-ceJ"/>
